# Praveen_Bank

./: .dockerignore  CMakeLists.txt  Dockerfile  account_data.txt
backend/include/: backend.h
backend/src/: backend.cpp  crow_backend.cpp  main_backend.cpp
frontend/: ZERO_CHECK.vcxproj.filters  accountdetails.html  admin.html  admin_exit.html  admin_login.html  allaccounts.html  customer.html  dashboard.html  deposit.html  exit.html  interest.html  loan.html  login.html  personalinfo.html  report.html  signup.html  start.html  withdraw.html
